resubido y acomodado el link de educacion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div>
             <img src="imagenes/equieduicon.png">
-            <span class="option"><a href="equidad_en_la_educacion.html">Equidad en la educación</a></span>
+            <span class="option"><a href="Equidad_en_la_educacion.html">Equidad en la educación</a></span>
         </div>
 
         <div>
