Todo configurado para poder acceder directo como botones

--- a/index.html
+++ b/index.html
@@ -24,30 +24,42 @@
             <i class='bx bx-menu' id="menu"></i>  
     </div>
     <div class="options">
+
+    <a href="paridad_de_genero.html">
         <div>
             <img src="imagenes/paridadicon.png">
-            <span class="option"><a href="paridad_de_genero.html">Paridad de genero</a></span>
+            <span class="option">Paridad de genero</span>
         </div>
-         
+    </a>
+
+    <a href="roles_y_estereotipos.html">
         <div>
             <img src="imagenes/estereoicon.png">
-            <span class="option"><a href="roles_y_estereotipos.html">Roles y estereotipos</a></span>
+            <span class="option">Roles y estereotipos</span>
         </div>
+    </a>
 
+    <a href="movimientos_y_politicas.html">
         <div>
             <img src="imagenes/poliymovicon.png">
-            <span class="option"><a href="movimientos_y_politicas.html">Movimientos y politicas</a></span>
+            <span class="option">Movimientos y politicas</span>
         </div>
+    </a>
 
+    <a href="Equidad_en_la_educacion.html">
         <div>
             <img src="imagenes/equieduicon.png">
-            <span class="option"><a href="Equidad_en_la_educacion.html">Equidad en la educación</a></span>
+            <span class="option">Equidad en la educación</span>
         </div>
+    </a>
 
+    <a href="instituciones.html">
         <div>
             <img src="imagenes/institucion.png">
-            <span class="option"><a href="instituciones.html">Instituciones que defienden la equidad</a></span>
+            <span class="option">Instituciones que defienden la equidad</span>
         </div>
+    </a>
+
 
     </div>
 </aside>
