--- a/paridad_de_genero.html
+++ b/paridad_de_genero.html
@@ -53,7 +53,7 @@
                 <a href="instituciones.html">
                     <div>
                         <img src="imagenes/institucion.png">
-                        <span class="option">Instituciones que defienden la equidad</span>
+                        <span class="option">Instituciones que<br> defienden la equidad</span>
                     </div>
                 </a>
         
