agregue 2 paginas mas, movimientos y la de instituciones

--- a/Equidad_en_la_educacion.html
+++ b/Equidad_en_la_educacion.html
@@ -58,6 +58,13 @@
             </div>
         </a>
 
+        <a href="pagina_video.html">
+            <div>
+                <img src="imagenes/videoicon.jpg">
+                <span class="option">Video representativo</span>
+            </div>
+        </a>
+
         <a onclick="window.history.back(-1);">
             <div>
                 <i class='bx bx-arrow-back'></i>
