--- a/paridad_de_genero.html
+++ b/paridad_de_genero.html
@@ -56,6 +56,13 @@
                         <span class="option">Instituciones que<br> defienden la equidad</span>
                     </div>
                 </a>
+
+                <a href="pagina_video.html">
+                    <div>
+                        <img src="imagenes/videoicon.jpg">
+                        <span class="option">Video representativo</span>
+                    </div>
+                </a>
         
                 <a onclick="window.history.back(-1);">
                     <div>
