se supones que esta es la ultima subida de todo

--- a/movimientos_y_politicas.html
+++ b/movimientos_y_politicas.html
@@ -16,7 +16,7 @@
 <body>
     <header class="encabezado">
         <h1 >Movimientos y políticas</h1>
-        <p>Construyendo una sociedad inclusiva y equitativa para todas las personas</p>
+        <p class="sub">Construyendo una sociedad inclusiva y equitativa para todas las personas</p>
     </header>
 
 
@@ -84,16 +84,6 @@
         </div>
     </aside>
     <script src="menu.js"></script>
-
-
-
-
-
-
-
-
-
-
 
     <main>
         <div class="contenido-info">
